{
    "name": "PlayerController",
    "maps": [
        {
            "name": "PlayerMove",
            "id": "b616b7b0-4c2a-42ba-9461-5818ab4fc721",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "492b419e-01bb-4209-9a0c-0fee7be98600",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Left/Right",
                    "id": "dfa8af0d-034a-4812-aa61-92fede6fd649",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bdca0d1b-f9ba-47df-8ebd-cd41e6075ff2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7b823163-5595-4c38-8b82-d43070cc5eae",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}